--- a/homework _1/lesson.html
+++ b/homework _1/lesson.html
@@ -9,7 +9,7 @@
 		<body class="menu">
 				<div class="div1">
 						<h1>Шевченко Дмитрий Валериевич &copy;</h1>
-					<img src="http://cs623730.vk.me/v623730406/17145/aFHVu0hsOd4.jpg" alt="здесь я довольный!" height="300" title="сдесь я довольный">
+					<img src="../homework _1/img/dmitriy_001.jpg" alt="здесь я довольный!" height="300" title="сдесь я довольный">
 					<span>Это Я</span>
 								<p align="center">Работник рынка </p>
 						<hr size="2px" width="100%" color="black">
