--- a/homework 1_1_porobleno/lesson.html
+++ b/homework 1_1_porobleno/lesson.html
@@ -10,7 +10,7 @@
 		<div class="list">
 				<div class="bloc">
 						<h3>Шевченко Дмитрий Валериевич &copy;</h3>
-						<img src="../homework _1_porobleno/img/dmitriy_001.jpg" alt="здесь я довольный!"  title="сдесь я довольный">
+						<img src="../homework 1_1_porobleno/img/dmitriy_001.jpg" alt="здесь я довольный!"  title="здесь я довольный">
 						<p>Работник рынка </p>
 				</div>
 
@@ -25,7 +25,7 @@
 
 				<div class="bloc">
 						<p>Мой контактный телефон</p>
-						<h2>+380502766304</h2>
+						<a href="tel:+380502766304" target="_blank">+380502766304</a>
 						<p>Мой профиль в фейсбуке</p>
 						<a href="https://www.facebook.com/oshuynuy" target="_blank">
 						facebook.com</a>
