--- a/FITNES/Fitnes.html
+++ b/FITNES/Fitnes.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Fitnes</title>
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style_fitnes.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -55,8 +55,9 @@
 					<li>Товары</li>
 					<li>О_нас</li>
 					<li>Контакты</li>
+					<p class="copyright">&copy 2014 All right reserved</p>
 				</ul>
-				<p class="copyright">&copy 2014 All right reserved</p>
+				
 			</div>
 			<div class="empty">
 			</div>	
